Стили для index
header+nav

--- a/less/general/general.less
+++ b/less/general/general.less
@@ -1,17 +1,9 @@
-html{
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
+*{
+  outline: 1px solid gray;
 }
 
 body{
   font-family: @font-open-sans;
-  font-size: @font-size;
-  line-height: @line-height;
   font-weight: @light;
   color: @black;
   background-color: @white;
