--- a/less/variables.less
+++ b/less/variables.less
@@ -5,10 +5,11 @@
 @black-30:     rgba(0, 0, 0, 0.3);
 @black-10:     rgba(0, 0, 0, 0.1);
 @yellow:       #f0c52e;
-@yellow-50:    rgba(247, 226, 150, 0.5);
-@yellow-30:    rgba(247, 226, 150, 0.3);
+@yellow-50:    rgba(240, 197, 46, 0.5);
+@yellow-30:    rgba(240, 197, 46, 0.3);
 @yellow-text:  #f7e184;
 @yellow-logo:  #ffc600;
+@yellow-bg:    #f7e296;
 @gray-light:   #eee;
 @gray-lighten: #ebebeb;
 @gray:         #e5e5e5;
@@ -28,3 +29,4 @@
 @font-size-title: 47px;
 @font-size-link:  18px;
 @line-height:     30px;
+@line-height-link:36px;
