--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,11 @@
 @import "node_modules/normalize.less/normalize.less";
+@import "general/fonts.less";
 @import "variables.less";
 @import "mixins.less";
 @import "general/general.less";
-@import "general/fonts.less";
+@import "blocks/main-header.less";
+@import "blocks/logo.less";
+@import "blocks/search-form.less";
+@import "blocks/user-block.less";
+@import "blocks/main-nav.less";
+@import "blocks/sub-nav.less";
