--- a/less/blocks/sub-nav.less
+++ b/less/blocks/sub-nav.less
@@ -1,12 +1,14 @@
 .sub-nav{
   position: absolute;
+  z-index: 5;
   top: 20px;
-  left: 0;
+  left: -60px;
   width: 1040px;
   min-height: 142px;
   display: none;
   justify-content: flex-start;
   align-items: flex-start;
+  padding: 0 60px;
   padding-top: 23px;
   background-color: @yellow-bg;
 }
