--- a/less/mixins.less
+++ b/less/mixins.less
@@ -24,3 +24,20 @@
     color: @black-30;
   }
 }
+
+.title(){
+  font-family: @font-gilroy;
+  font-size: @font-size-title;
+  line-height: 1.2em;
+  font-weight: @extrabold;
+  letter-spacing: 0.01em;
+  color: @black;
+}
+.text(){
+  font-family: @font-open-sans;
+  font-size: @font-size;
+  line-height: @line-height;
+  font-weight: @light;
+  color: @gray-dark;
+  letter-spacing: 0.01em;
+}
