--- a/less/style.less
+++ b/less/style.less
@@ -9,3 +9,5 @@
 @import "blocks/user-block.less";
 @import "blocks/main-nav.less";
 @import "blocks/sub-nav.less";
+@import "blocks/slider.less";
+@import "blocks/button.less";
