--- a/less/variables.less
+++ b/less/variables.less
@@ -27,6 +27,7 @@
 
 @font-size:       15px;
 @font-size-title: 47px;
+@font-size-subtitle: 36px;
 @font-size-link:  18px;
 @line-height:     30px;
 @line-height-link:36px;
