--- a/less/blocks/popular.less
+++ b/less/blocks/popular.less
@@ -1,6 +1,7 @@
 .popular{
   .inner();
-  min-height: 420px;
+  min-height: 320px;
+  margin-bottom: 100px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
