--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   min-width: 220px;
   height: 40px;
-  padding: 10px 43px;
+  padding: 10px 0;
   font-family: @font-gilroy;
   font-size: @font-size-link;
   font-weight: @extrabold;
@@ -42,5 +42,17 @@
   &--slider{
     margin-left: 3px;
     margin-bottom: 51px;
+  }
+
+  &--services{
+    min-width: 160px;
+
+    &:active{
+      color: @yellow-text;
+    }
+
+    &:active::after{
+      background-color: @black;
+    }
   }
 }
