--- a/less/blocks/services.less
+++ b/less/blocks/services.less
@@ -1,8 +1,9 @@
 .services{
-  min-height: 290px;
+  min-height: 288px;
   background-color: @gray;
   // border: 1px solid @gray;
   padding-top: 1px;
+  margin-bottom: 93px;
 }
 // отрицательный margin поднимает и верхний блок с фоном
 // но если ему задать бордер- то нет)   ???
