--- a/less/style.less
+++ b/less/style.less
@@ -13,3 +13,4 @@
 @import "blocks/button.less";
 @import "blocks/popular.less";
 @import "blocks/services.less";
+@import "blocks/popular-brands.less";
