--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -46,6 +46,7 @@
 
   &--services{
     min-width: 160px;
+    padding-left: 3px;
 
     &:active{
       color: @yellow-text;
@@ -54,5 +55,11 @@
     &:active::after{
       background-color: @black;
     }
+  }
+
+  &--info{
+    margin-top: auto;
+    padding-left: 6px;
+    min-width: 260px;
   }
 }
