--- a/less/style.less
+++ b/less/style.less
@@ -14,3 +14,4 @@
 @import "blocks/popular.less";
 @import "blocks/services.less";
 @import "blocks/popular-brands.less";
+@import "blocks/info-block.less";
