--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -14,8 +14,10 @@
   text-decoration: none;
   text-align: center;
   letter-spacing: 0.2em;
+  background-color: transparent;
   border: none;
   outline: none;
+  cursor: pointer;
 
   &::after{
     content: "";
@@ -61,5 +63,9 @@
     margin-top: auto;
     padding-left: 6px;
     min-width: 260px;
+  }
+
+  &--feedback{
+    min-width: 200px;
   }
 }
