--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -10,4 +10,19 @@
   letter-spacing: 0.01em;
   text-transform: uppercase;
   text-decoration: none;
+
+  &--footer{
+    position: static;
+    color: @yellow-logo;
+
+    &:hover{
+      color: @yellow-logo;
+      opacity: 0.6;
+    }
+
+    &:active{
+      color: @yellow-logo;
+      opacity: 0.3;
+    }
+  }
 }
