--- a/less/style.less
+++ b/less/style.less
@@ -15,3 +15,6 @@
 @import "blocks/services.less";
 @import "blocks/popular-brands.less";
 @import "blocks/info-block.less";
+@import "blocks/footer.less";
+@import "blocks/socials.less";
+@import "blocks/feedback.less";
