--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
 @white:        #fff;
+@white-70:     rgba(255, 255, 255, 0.7);
 @white-30:     rgba(255, 255, 255, 0.3);
 @black:        #000;
 @black-60:     rgba(0, 0, 0, 0.6);
@@ -15,6 +16,7 @@
 @gray:         #e5e5e5;
 @gray-darken:  #d9d9d9;
 @gray-dark:    #464646;
+@gray-input:   #f2f2f2;
 @pink:         #f6dada;
 
 
