--- a/less/style.less
+++ b/less/style.less
@@ -18,3 +18,5 @@
 @import "blocks/footer.less";
 @import "blocks/socials.less";
 @import "blocks/feedback.less";
+@import "blocks/modal-close.less";
+@import "blocks/modal-map.less";
