+правки по доступности

--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -15,7 +15,8 @@
     position: static;
     color: @yellow-logo;
 
-    &:hover{
+    &:hover,
+    &:focus{
       color: @yellow-logo;
       opacity: 0.6;
     }
