--- a/less/blocks/popular-brands.less
+++ b/less/blocks/popular-brands.less
@@ -15,7 +15,8 @@
   filter: grayscale(100%);
   transition: all 0.5s;
 
-  &:hover{
+  &:hover,
+  &:focus{
     opacity: 1;
     filter: none;
   }
