--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -15,8 +15,7 @@
   text-align: center;
   letter-spacing: 0.2em;
   background-color: transparent;
-  border: none;
-  outline: none;
+  border: none;      
   cursor: pointer;
 
   &::after{
@@ -32,7 +31,8 @@
     transition: all 0.3s ease;
   }
 
-  &:hover::after{
+  &:hover::after,
+  &:focus::after{
     height: 40px;
     margin-top: -20px;
   }
