--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -46,11 +46,13 @@
   color: @white-70;
   padding-top: 5px;
 
-  &:hover{
+  &:hover,
+  &:focus{
     color: @white;
   }
 
-  &:hover .footer__icon{
+  &:hover .footer__icon,
+  &:focus .footer__icon{
     opacity: 0.6;
   }
 
@@ -69,16 +71,9 @@
 
   &--academy{
     width: 27px;
-    height: 34px;
-    background: url("../img/icons/logo-html.svg") no-repeat 50%;
-
-    &:hover{
-      opacity: 0.6;
-    }
-
-    &:active{
-      opacity: 0.3;
-    }
+    height: 37px;
+    font-size: 0;
+    line-height: 0;
   }
 }
 
@@ -125,7 +120,8 @@
   letter-spacing: 0.2em;
   color: @white;
 
-  &:hover{
+  &:hover,
+  &:focus{
     opacity: 0.6;
   }
 
