--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,3 +1,4 @@
+// переделаю на слайдер без позиционирования
 .slider{
   position: relative;
   min-height: 500px;
@@ -135,6 +136,8 @@
   position: relative;
   height: 10px;
   width: 10px;
+  text-indent: 100%;
+  overflow: hidden;
   border: 1px solid @black;
   border-radius: 50%;
   cursor: pointer;
