--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -16,6 +16,10 @@
   align-items: flex-start;
   margin-bottom: 18px;
 
+  &:nth-child(2){
+    margin-bottom: 40px;
+  }
+
   &:last-child{
     position: relative;
     margin-top: auto;
@@ -72,8 +76,6 @@
   &--academy{
     width: 27px;
     height: 37px;
-    font-size: 0;
-    line-height: 0;
   }
 }
 
@@ -109,6 +111,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  flex-wrap: wrap;
 }
 
 .footer__nav-link{
