--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -14,4 +14,9 @@
   padding-top: 35px;
   padding-bottom: 165px;
   background-color: @yellow-bg;
+
+  &--inner-page{
+    padding-bottom: 52px;
+    margin-bottom: 33px;
+  }
 }
