--- a/less/blocks/user-block.less
+++ b/less/blocks/user-block.less
@@ -23,6 +23,14 @@
     opacity: 0.3;
   }
 
+  &--login{
+    margin-right: 20px;
+  }
+
+  &--logout{
+    color: @black-30;
+  }
+
   &--compare{
     margin-left: auto;
   }
