--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/sub-nav.less";
 @import "blocks/slider.less";
 @import "blocks/button.less";
+@import "blocks/main-content.less";
 @import "blocks/popular.less";
 @import "blocks/services.less";
 @import "blocks/popular-brands.less";
@@ -20,3 +21,10 @@
 @import "blocks/feedback.less";
 @import "blocks/modal-close.less";
 @import "blocks/modal-map.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/breadcrumbs.less";
+@import "blocks/filter.less";
+@import "blocks/catalog.less";
+@import "blocks/sort.less";
+@import "blocks/product-card.less";
+@import "blocks/pagination.less";
