--- a/less/variables.less
+++ b/less/variables.less
@@ -12,6 +12,7 @@
 @yellow-logo:  #ffc600;
 @yellow-bg:    #f7e296;
 @gray-light:   #eee;
+@gray-light-70:rgba(238, 238, 238, 0.7);
 @gray-lighten: #ebebeb;
 @gray:         #e5e5e5;
 @gray-darken:  #d9d9d9;
