--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -4,8 +4,9 @@
   display: inline-block;
   box-sizing: border-box;
   min-width: 220px;
+  max-width: 380px;
   height: 40px;
-  padding: 10px 0;
+  padding: 10px;
   font-family: @font-gilroy;
   font-size: @font-size-link;
   font-weight: @extrabold;
@@ -15,7 +16,7 @@
   text-align: center;
   letter-spacing: 0.2em;
   background-color: transparent;
-  border: none;      
+  border: none;
   cursor: pointer;
 
   &::after{
@@ -48,7 +49,7 @@
 
   &--services{
     min-width: 160px;
-    padding-left: 3px;
+    max-width: 280px;
 
     &:active{
       color: @yellow-text;
@@ -61,11 +62,20 @@
 
   &--info{
     margin-top: auto;
-    padding-left: 6px;
     min-width: 260px;
+    max-width: 500px;
   }
 
   &--feedback{
     min-width: 200px;
+  }
+
+  &--filter{
+    min-width: 200px;
+  }
+
+  &--catalog{
+    min-width: 200px;
+    margin-bottom: 5px;
   }
 }
