--- a/less/blocks/info-block.less
+++ b/less/blocks/info-block.less
@@ -47,8 +47,7 @@
 
 .info-block__list{
   padding: 0;
-  margin: 0;
-  margin-top: 50px;
+  margin: 50px 0;
   list-style: none;
 }
 
@@ -77,5 +76,6 @@
   width: 100%;
   height: 222px;
   margin-top: 24px;
+  margin-bottom: 65px;
   background: url("../img/map.jpg");
 }
