--- a/less/blocks/popular-brands.less
+++ b/less/blocks/popular-brands.less
@@ -11,6 +11,7 @@
   height: 100px;
   text-indent: 100%;
   overflow: hidden;
+  white-space: nowrap;
   opacity: 0.2;
   filter: grayscale(100%);
   transition: all 0.5s;
