--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -10,10 +10,18 @@
   }
 }
 
+.slider__inner{
+  width: 1160px;
+  overflow: hidden;
+}
+
+.slider__slides{
+  width: 300%;
+  display: flex;
+}
+
 .slider__slide{
-  position: absolute;
-  z-index: 0;
-  opacity: 0;
+  position: relative;
   width: 1160px;
   display: flex;
   padding-top: 78px;
@@ -63,7 +71,7 @@
   .title();
   z-index: 1;
   position: relative;
-  width: 505px;
+  width: 515px;
   margin: 0;
   margin-bottom: 20px;
   margin-left: 3px;
@@ -163,9 +171,12 @@
   display: block;
 }
 // привязываем слайды к радио-кнопкам
-.slider__check1:checked ~ .slider__slide--first,
-.slider__check2:checked ~ .slider__slide--second,
-.slider__check3:checked ~ .slider__slide--third{
-  z-index: 1;
-  opacity: 1;
+.slider__check1:checked ~ .slider__inner .slider__slides{
+  transform: translate(0);
+}
+.slider__check2:checked ~ .slider__inner .slider__slides{
+  transform: translate(-1160px);
+}
+.slider__check3:checked ~ .slider__inner .slider__slides{
+  transform: translate(-2320px);
 }
