--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -1,15 +1,12 @@
 .catalog{
-  width: 67%;
+  width: calc(~"50% + 250px");
 }
 
 .catalog__inner{
   width: 760px;
-  // margin-right: auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding-top: 140px;
   padding-left: 70px;
-  outline: 1px solid blue;
-  outline-offset: -1px;
 }
