--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -72,6 +72,11 @@
     border: 3px solid @yellow-bg;
   }
 
+  &:invalid{
+    background: @pink;
+    border: none; 
+  }
+
   &--field{
     width: 100%;
     height: 155px;
