--- a/less/variables.less
+++ b/less/variables.less
@@ -21,8 +21,8 @@
 @pink:         #f6dada;
 
 
-@font-gilroy:    "Gilroy", sans-serif;
-@font-open-sans: "Open Sans", sans-serif;
+@font-gilroy:    "Gilroy", "Verdana", sans-serif;
+@font-open-sans: "Open Sans", "Arial", sans-serif;
 
 @light:     300;
 @regular:   400;
