--- a/less/blocks/filter.less
+++ b/less/blocks/filter.less
@@ -1,5 +1,5 @@
 .filter{
-  width: 33%;
+  width: calc(~"50% - 250px");
   background-color: #eee;
 }
 
@@ -16,37 +16,37 @@
 }
 
 .filter__form{
-  outline: 1px solid green;
-  outline-offset: -1px;
   width: 200px;
   padding-right: 70px;
   margin-left: auto;
 
   & fieldset{
-    position: relative;
     border: none;
     padding: 0;
     margin: 0;
-
-    &::before{
-      content: "";
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 2px;
-      background-color: @black;
-    }
   }
 }
+
 // Стили для Legend
 .filter__sub-title{
+  position: relative;
   display: block;
+  width: 100%;
   padding: 14px 0 5px;
   margin-bottom: 20px;
   font-family: @font-gilroy;
   font-size: @font-size-link;
   color: @black;
   font-weight: @extrabold;
+
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 2px;
+    background-color: @black;
+  }
 }
 
 .filter__price{
@@ -96,6 +96,7 @@
     margin-top: -12px;
   }
 }
+
 .filter__label{
   width: 88px;
   font-family: @font-gilroy;
@@ -116,7 +117,7 @@
 .filter__color-select{
   min-height: 285px;
 
-  & input[type=checkbox]{
+  & input[type="checkbox"]{
     display: none;
   }
 
@@ -156,11 +157,11 @@
   }
 }
 
-#check_black:checked + label[for=check_black]::before,
-#check_white:checked + label[for=check_white]::before,
-#check_blue:checked + label[for=check_blue]::before,
-#check_red:checked + label[for=check_red]::before,
-#check_pink:checked + label[for=check_pink]::before{
+#check_black:checked + label::before,
+#check_white:checked + label::before,
+#check_blue:checked + label::before,
+#check_red:checked + label::before,
+#check_pink:checked + label::before{
   border: none;
   width: 27px;
   height: 23px;
@@ -170,7 +171,7 @@
 .filter__select-bluetooth{
   min-height: 165px;
 
-  & input[type=radio]{
+  & input[type="radio"]{
     display: none;
   }
 
@@ -226,7 +227,7 @@
   }
 }
 
-#check_yes:checked + label[for=check_yes]::after,
-#check_no:checked + label[for=check_no]::after{
+#check_yes:checked + label::after,
+#check_no:checked + label::after{
    display: block;
 }
