--- a/less/blocks/main-content.less
+++ b/less/blocks/main-content.less
@@ -6,14 +6,14 @@
 
 .main-content__title{
   .title();
-  width: 1040px;
-  margin: 0 auto;
+  .inner();
+  padding: 0 80px;
   margin-bottom: 15px;
 }
 
 .main-content__inner{
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: -70px;
 }
