--- a/less/general/general.less
+++ b/less/general/general.less
@@ -1,9 +1,6 @@
-*{
-  // outline: 1px solid gray;
-}
-
 body{
   font-family: @font-open-sans;
+  font-size: @font-size;
   font-weight: @light;
   color: @black;
   background-color: @white;
