--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,8 +1,8 @@
 .inner(){
-  width: 1160px;
+  box-sizing: border-box;
+  width: 1200px;
   padding: 0 20px;
   margin: 0 auto;
-  outline: 1px solid red;
 }
 
 .link-font(){
